--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ button {
     padding: 0em 0.75em;
     line-height: 200%;
     opacity: 0;
+    border-radius: 6px;
 }
 
 .tooltip:hover::before {
