--- a/style.css
+++ b/style.css
@@ -1,24 +1,15 @@
-body {
-    font-family: sans-serif;
-}
-
 #title,
 #showssid,
-#qrcode,
-#footer {
+#qrcode {
     text-align: center;
 }
 
-#footer img {
-    vertical-align: middle;
-}
-
 #about,
-#form {
-    width: 30%;
+#contact,
+#generator {
+    width: 40%;
     margin-left: auto;
     margin-right: auto;
-    text-align: left;
 }
 
 #showssid {
@@ -30,51 +21,30 @@ body {
     width: 100%;
 }
 
-code {
-    display: block;
-    margin: 0.5em;
+
+#hidden,
+#display-key {
+    margin: 0px 0px 5px 5px;
 }
 
-input,
-select,
-button {
-    border-radius: 6px;
-    padding: 3px;
+.footer {
+    text-align: center;
+    padding: 30px 0;
+    margin-top: 70px;
+    border-top: 1px solid #e5e5e5;
+    background-color: #f5f5f5;
 }
-
-.tooltip {
-    position: relative;
-    display: block;
+.footer p {
+    margin-bottom: 0;
+    color: #777;
 }
-
-.tooltip:hover:before {
-    content: attr(data-tooltip);
-    font-size: 80%;
-    position: absolute;
-    z-index: 999;
-    left: 0;
-    background: #000;
-    color: #e0e0e0;
-    padding: 0em 0.75em;
-    line-height: 200%;
-    opacity: 0.8;
-    border-radius: 6px;
-    top: 2.8em;
+.footer-links {
+    margin: 10px 0;
 }
-
-.tooltip:hover:after {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-width: 10px;
-    border-style: solid;
-    border-color: transparent transparent #000 transparent;
-    top: 1em;
-    margin-left: -20px;
-    opacity: 0.8;
+.footer-links li {
+    display: inline;
+    padding: 0 2px;
 }
-
-.tooltip-label {
-    float: left;
+.footer-links li:first-child {
+    padding-left: 0;
 }
