use a bootstrap dropdown for the history
also allow the user to clear the history

--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@
 
 #about,
 #contact,
-#generator,
-#history {
+#generator {
     width: 40%;
     margin-left: auto;
     margin-right: auto;
@@ -17,7 +16,7 @@
     display: none;
 }
 
-#history {
+#history-drop {
     display: none;
 }
 
