--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@
     z-index: 9999;
 }
 
+.github-fork-ribbon a:hover {
+    color: white;
+    text-decoration: none;
+}
+
 .footer {
     text-align: center;
     padding: 30px 0;
