do not add a margin for the footer on low-res devices

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -18,4 +18,9 @@
     #generator {
         width: 80%;
     }
+
+    .footer {
+        margin-left: -20px;
+        margin-right: -20px;
+    }
 }
