--- a/print.css
+++ b/print.css
@@ -13,5 +13,6 @@
 #showssid,
 #showkey {
     display: block;
-    word-wrap: break-word; 
+    word-wrap: break-word;
+    font-family: Consolas, Menlo, "DejaVu Sans Mono", monospace;
 }
